    * index.php: compute queryframe_height from image size, thanks to
      Michael Keck
    * footer.inc.php: sync left frame when choosing a db from server_databases,
      thanks to Michael Keck
    * export.php: no longer auto-select the textarea containing exported data
    * queryframe.php: bug #977790, missing library, 
      thanks to Anthony Parsons (anthony.parsons at manx.net)

2004-06-24 Alexander M. Turek  <me@derrabus.de>
    * libraries/dbi/mysqli.dbi.php: Undefined variable if PMA_DBI_getError() is
      called although no error occured.

2004-06-24 Michal Čihař  <michal@cihar.com>
    * main.php, changelog.php: Add headers to ChangeLog display.
    * scripts/create_tables.sql: Add IF EXISTS.
    * libraries/read_dump.lib.php: Ignore comments for SQL splitting,
      otherwise unmatched quotes cause problems (bug #978113).
    * libraries/common.lib.php: Use read_dump.php instead of sql.php for
      links, otherwise we'll fail on commas.
    * read_dump.php, libraries/read_dump.lib.php: Show last SELECT result also
      when there are comments behind last query.

2004-06-23 Marc Delisle  <lem9@users.sourceforge.net>
    * many files: remove references to older /images, and
      erase /images contents

2004-06-22 Marc Delisle  <lem9@users.sourceforge.net>
    * config.inc.php, themes/.../colors.inc.php: remove color-related
      parameters from config.inc.php, and non-color-related from colors.inc.php
    * config.inc.php, libraries/common.lib.php, libraries/config_import.lib.php:
      missing parameter for the Refresh link feature

2004-06-22 Michal Čihař  <michal@cihar.com>
    * libraries/relation.lib.php: Fix possible error on non existant pma db.
    
2004-06-20 Marc Delisle  <lem9@users.sourceforge.net>
    * themes.php: use standard headers. A iso-8859-1 charset was hardcoded
      in this script, but it's better to use libraries/header_http.inc.php

2004-06-18 Marc Delisle  <lem9@users.sourceforge.net>